--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "php": ">=5.3.0"
     },
     "autoload": {
-        "psr-0": {
-            "Location": "src/"
+        "psr-4": {
+            "PHP2GIS\\": "src/PHP2GIS"
         }
     }
 }
